--- a/connection.html
+++ b/connection.html
@@ -5,7 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<button id="relogin">Relogin</button>
+<button id="relogin">Relogin</button><br><br>
+<button id="retry">Retry connection</button>
 <script src="dist/bundle.js"></script>
+
 </body>
 </html>
