working draft version

--- a/connection.html
+++ b/connection.html
@@ -5,9 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-<button id="relogin">Relogin</button><br><br>
+<button id="relogin">Relogin</button>
+<br><br>
 <button id="retry">Retry connection</button>
+<br><br>
+<button id="close">Close connection</button>
 <script src="dist/bundle.js"></script>
-
 </body>
 </html>
